--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,5 +1,5 @@
-.body{
-    background-color: #038C7F;
+.bodyFooter{
+    background-color: #b6d101;
     display: flex;
     justify-content: space-between;
     align-items: center;
