--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -3,6 +3,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    height: 10%;
+    bottom: 0;
+    position: fixed;
 }
 
 .lines{
