--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -4,6 +4,10 @@
     justify-content: center;
     align-items: center;
     color: black;
+    position: fixed;
+    width: 100%;
+    height: 15%;
+    top: 0;
 }
 .pageTitle{
 display: flex;
