--- a/frontend/src/components/listLine/ListLine.css
+++ b/frontend/src/components/listLine/ListLine.css
@@ -1,16 +1,20 @@
 .listBody{
-margin-top: 5px;
-margin-bottom: 5px;
+padding-top: 100px;
+padding-bottom: 70px;
+
 }
 
 .elementBody{
+    min-height: 150px;
     background-color: #3D505D;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     text-align: center;
     flex-wrap: wrap;
     column-count: 1;
     column-gap: 10px;
     color: yellow;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border: 3px solid #688CA4;
 }
