--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -7,6 +7,7 @@
     height: 10%;
     bottom: 0;
     position: fixed;
+    z-index: 10000;
 }
 
 .lines{
@@ -14,15 +15,19 @@
     justify-content:center;
     align-items:center;
     text-align: center;
-    padding: 10px;
+    padding-top: 3px;
     width: 50%;
+    height: 100%;
+    border-right: 2px solid black;
 }
 
-.busStop{
+.user{
 display: table-column;
 justify-content:center;
 align-items:center;
 text-align: center;
-padding: 10px;
+padding-top: 3px;
 width: 50%;
+height: 100%;
+border-left: 2px solid black;
 }
