--- a/frontend/src/components/listLine/ListLine.css
+++ b/frontend/src/components/listLine/ListLine.css
@@ -10,11 +10,38 @@ padding-bottom: 70px;
     width: 100%;
     justify-content: center;
     text-align: center;
-    flex-wrap: wrap;
     column-count: 1;
     column-gap: 10px;
     color: yellow;
     margin-top: 10px;
     margin-bottom: 10px;
     border: 3px solid #688CA4;
+}
+
+.elementBody>button{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: center;
+    width: 40%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.delButton{
+    background-color: red;
+    color: white;
+    border: none;
+}
+
+.updButton{
+    background-color: rgb(220, 253, 3);
+    color: black;
+    border: none;
+}
+
+.buttonAdd{
+   margin-left: 75%;
 }
