--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -7,7 +7,8 @@
     height: 10%;
     bottom: 0;
     position: fixed;
-    z-index: 10000;
+    z-index: 100;
+    border: 1px solid black;
 }
 
 .lines{
@@ -27,7 +28,7 @@ justify-content:center;
 align-items:center;
 text-align: center;
 padding-top: 3px;
-width: 50%;
+width: 100%;
 height: 100%;
-border-left: 2px solid black;
+/* border-left: 2px solid black; */
 }
