--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -8,7 +8,8 @@
     width: 100%;
     height: 15%;
     top: 0;
-    z-index: 10000;
+    z-index: 100;
+    border: 1px solid black;
 }
 .pageTitle{
 display: flex;
