--- a/frontend/src/components/listLine/ListLine.css
+++ b/frontend/src/components/listLine/ListLine.css
@@ -11,7 +11,7 @@ padding-bottom: 70px;
     text-align: center;
     column-count: 1;
     column-gap: 10px;
-    color: yellow;
+    color: #ffff00;
     margin-top: 10px;
     margin-bottom: 10px;
     border: 3px solid #688CA4;
@@ -34,7 +34,7 @@ padding-bottom: 70px;
 }
 
 .delButton{
-    background-color: red;
+    background-color: #ff0000;
     color: white;
     border: none;
     z-index: 50;
