--- a/frontend/src/components/headerSchedule/HeaderSchedule.css
+++ b/frontend/src/components/headerSchedule/HeaderSchedule.css
@@ -22,7 +22,7 @@ background-position: right bottom;
 width: 100%;
 }
 
-.dropdown{
+.back{
 display: flex;
 justify-content:center;
 align-items:center;
